fix(packages/kui-builder): text selection color in dark theme too dark
Fixes #2006

--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
@@ -20,6 +20,8 @@ body[kui-theme="Dark"] {
     --color-base0E: #b294bb; /* MAGENTA: Keywords, Storage, Selector, Markup Italic, Diff Changed */
     --color-base0F: #a3685a; /* BROWN: Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?> */
 
+    --color-selection-background: var(--color-base05);
+
     --color-light-red: hsla(357, 96%, 64%, 50%);
     --color-light-green: hsla(134, 43%, 52%, 50%);
     --color-light-yellow: hsla(46, 98%, 61%, 50%);
